HFP-230 Animations and responsive. Made animations use css instead of JS. Made width of flashcards less hardcoded, moved from js to css. Made the container smarter so it now automatically scales height based on cards. Fixed design breaking on mobile.

--- a/css/flashcards.css
+++ b/css/flashcards.css
@@ -42,11 +42,32 @@
 }
 
 .h5p-flashcards .h5p-card {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  display: none;
   vertical-align: middle;
-  width: 26.8em;
+  width: 26em;
+  min-width: 14em;
   margin: 0 0.6em;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  transition: transform 0.5s;
+}
+
+.h5p-flashcards .h5p-card.h5p-current {
+  transform: translateX(0%);
+  display: block;
+  z-index: 1;
+}
+
+.h5p-flashcards .h5p-card.h5p-previous {
+  transform: translateX(-100%);
+  display: block;
+}
+
+.h5p-flashcards .h5p-card.h5p-next {
+  transform: translateX(100%);
+  display: block;
 }
 
 .h5p-flashcards .h5p-card .h5p-flashcard-overlay {
@@ -56,6 +77,7 @@
   width: 100%;
   height: 100%;
   border-radius: inherit;
+  will-change: opacity;
 }
 
 .h5p-flashcards .h5p-card > .h5p-flashcard-overlay {
